CSS fixes, improved js code readability

--- a/app/assets/stylesheets/options.css.scss
+++ b/app/assets/stylesheets/options.css.scss
@@ -16,24 +16,3 @@ label.option_radio_label > input + img{ /* IMAGE STYLES */
 
       
 }
-
-input:checked.part_child_15 + img,
-input:checked.part_child_18 + img,
-input:checked.radio_option_child + img,
-label.option_radio_label > input:checked + img{ /* (RADIO CHECKED) IMAGE STYLES */
-  border: 1px solid #000;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
-
-}
-
-input[type="radio"], input[type="checkbox"]{
-  width: 100px;
-height: 100px;
-position: absolute;
-opacity: 0;
-cursor: pointer;
-}
-
-
